--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel = 'stylesheet' href="/css/cadastro-cliente.css">
-    <link rel = 'stylesheet' href="/css/estilo.css">
-    <link rel = 'stylesheet' href="/componentes/header/header.css">
-    <link rel = 'stylesheet' href="/componentes/modal-login/login.css">
-    <link rel = 'stylesheet' href="/css/footer.css">
+    <link rel='stylesheet' href="/css/cadastro-cliente.css">
+    <link rel='stylesheet' href="/css/estilo.css">
+    <link rel='stylesheet' href="/componentes/header/header.css">
+    <link rel='stylesheet' href="/componentes/modal-login/login.css">
+    <link rel='stylesheet' href="/css/footer.css">
 
 
     <title>MVP Skins - Cadastre - se</title>
@@ -183,6 +183,10 @@
                                     <li class="list-group-item d-flex justify-content-between">Armas
                                         <img src="/images/icones/icon-arma.png" width="30" height="30">
                                     </li>
+                                    <li class="list-group-item d-flex justify-content-between">
+                                        <a class="links-menu" href="/dashboardcliente.html">Seus Dados</a>
+                                        <img src="/images/icones/icon-pessoa.png" width="30" height="30">
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -220,7 +224,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link link-header" href="#">Carrinho
+                    <a class="nav-link link-header" href="/carrinho.html">Carrinho
                         <img src="/images/icones/icon-carrinho.png" width="30" height="30">
                     </a>
                 </li>
