--- a/carrinho.html
+++ b/carrinho.html
@@ -5,8 +5,6 @@
   <!-- Meta tags Obrigatórias -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
- HEAD
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -181,6 +179,10 @@
                   </li>
                   <li class="list-group-item d-flex justify-content-between">Armas
                     <img src="/images/icones/icon-arma.png" width="30" height="30">
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <a class = "links-menu" href="/dashboardcliente.html">Seus Dados</a>
+                    <img src = "/images/icones/icon-pessoa.png" width="30" height="30">
                   </li>
                 </ul>
               </div>
