--- a/cadastro-cliente.html
+++ b/cadastro-cliente.html
@@ -161,26 +161,26 @@
                     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
                         aria-labelledby="offcanvasExampleLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Titulo(Opcional)</h5>
+                            <h5 class="offcanvas-title" id="offcanvasExampleLabel">CATEGORIAS</h5>
                             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <div>
                                 <ul class="list-group">
-                                    <li class="list-group-item d-flex justify-content-between"> Facas
+                                    <li class="list-group-item d-flex justify-content-between"> <a class="links-menu" href="">Facas</a>
                                         <img src="/images/icones/icon-faca.png" width="30" height="30">
                                     </li>
-                                    <li class="list-group-item d-flex justify-content-between">Luvas
+                                    <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Luvas</a>
                                         <img src="/images/icones/icon-luva.png" width="30" height="30">
                                     </li>
-                                    <li class="list-group-item d-flex justify-content-between">Caixas
+                                    <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Caixas</a>
                                         <img src="/images/icones/icon-caixa.png" width="30" height="30">
                                     </li>
-                                    <li class="list-group-item d-flex justify-content-between">Agentes
+                                    <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Agentes</a>
                                         <img src="/images/icones/icon-agente.png" width="30" height="30">
                                     </li>
-                                    <li class="list-group-item d-flex justify-content-between">Armas
+                                    <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Armas</a>
                                         <img src="/images/icones/icon-arma.png" width="30" height="30">
                                     </li>
                                     <li class="list-group-item d-flex justify-content-between">
