--- a/componentes/header/header.html
+++ b/componentes/header/header.html
@@ -144,11 +144,11 @@
           <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
             <img src="/images/icones/icon-menu.png" width="30" height="30">
           </a>
-          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
+          <div class="offcanvas offcanvas-start menu-lateral" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel">Titulo(Opcional)</h5>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+              <h5 class="offcanvas-title" id="offcanvasExampleLabel titulo-menu">Titulo(Opcional)</h5>
+              <button type="button" class="btn-close text-reset titulo-menu" data-bs-dismiss="offcanvas"
                 aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
