--- a/home.html
+++ b/home.html
@@ -45,14 +45,14 @@
         <!--FIM DO BOTÃO DO LOGIN-->
 
         <!-- BOTÃO DE CADASTRO  -->
-        <a class = "link-header" href="/cadastro-cliente.html">
+        <a class="link-header" href="/cadastro-cliente.html">
           <button type="reset"
-          class="btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
-          data-bs-dismiss="modal">
-          Cadastre-se
-        </button>
+            class="btn btn-outline-secondary btn-mvp btn-secundario-mvp btn-cadastrar d-flex justify-content-center align-items-center"
+            data-bs-dismiss="modal">
+            Cadastre-se
+          </button>
         </a>
-        
+
       </div>
       <!-- FIM BOTÃO DE CADASTRO -->
     </div>
@@ -156,31 +156,31 @@
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title titulo-menu" id="offcanvasExampleLabel">Titulo(Opcional)</h5>
+              <h5 class="offcanvas-title" id="offcanvasExampleLabel">CATEGORIAS</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                 aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <div>
                 <ul class="list-group">
-                  <li class="list-group-item d-flex justify-content-between"> Facas
+                  <li class="list-group-item d-flex justify-content-between"> <a class="links-menu" href="">Facas</a>
                     <img src="/images/icones/icon-faca.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Luvas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Luvas</a>
                     <img src="/images/icones/icon-luva.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Caixas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Caixas</a>
                     <img src="/images/icones/icon-caixa.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Agentes
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Agentes</a>
                     <img src="/images/icones/icon-agente.png" width="30" height="30">
                   </li>
-                  <li class="list-group-item d-flex justify-content-between">Armas
+                  <li class="list-group-item d-flex justify-content-between"><a class="links-menu" href="">Armas</a>
                     <img src="/images/icones/icon-arma.png" width="30" height="30">
                   </li>
                   <li class="list-group-item d-flex justify-content-between">
-                    <a class = "links-menu" href="/dashboardcliente.html">Seus Dados</a>
-                    <img src = "/images/icones/icon-pessoa.png" width="30" height="30">
+                    <a class="links-menu" href="/dashboardcliente.html">Seus Dados</a>
+                    <img src="/images/icones/icon-pessoa.png" width="30" height="30">
                   </li>
                 </ul>
               </div>
@@ -332,7 +332,7 @@
       </button>
     </div>
   </div>
-  <div class = "container-fluid d-flex justify-content-center align-items-center titulo-banner ">
+  <div class="container-fluid d-flex justify-content-center align-items-center titulo-banner ">
     Top Armas
   </div>
   <!-- Início do carousel de produtos  -->
@@ -627,7 +627,7 @@
     </a>
   </div>
 
-  <div class = "container-fluid d-flex justify-content-center align-items-center titulo-banner ">
+  <div class="container-fluid d-flex justify-content-center align-items-center titulo-banner ">
     Top Agentes
   </div>
 
@@ -923,7 +923,7 @@
     </a>
   </div>
 
-  <div class = "container-fluid d-flex justify-content-center align-items-center titulo-banner ">
+  <div class="container-fluid d-flex justify-content-center align-items-center titulo-banner ">
     Top Facas
   </div>
 
