Atualizações no carrinho e adição da imagem inicial da estrutura do banco de dados

--- a/carrinho.html
+++ b/carrinho.html
@@ -230,9 +230,9 @@
     <!-- Início do body  -->
     <!-- Início do container principal -->
     <div class="container">
-      <div class="py-5 m-auto row">
+      <div class="container-carrinho py-5 m-auto row">
         <!-- Início da lateral do carrinho -->
-        <div class="cupom-banner-carrinho col-lg-12 col-xl-4 ">
+        <div class="cupom-banner-carrinho my-3 col-lg-12 col-xl-4 ">
           <!-- Início card de carteira virtual do carrinho  -->
           <div class="card carteira-virtual">
             <div class="card-body">
@@ -251,7 +251,7 @@
         <!-- Fim da lateral do carrinho -->
         
         <!-- Início da listagem de produtos no carrinho -->
-        <div class="table-responsive carrinho py-3 mx-0 col-11 col-sm-11 col-md-10 col-lg-10 col-xl-8">
+        <div class="table-responsive carrinho my-3 col-11 col-sm-11 col-md-10 col-lg-10 col-xl-8">
           <table class="table container-itens col-md-12 col-lg-12">
             <thead>
               <tr>
