Correções do carousel de produtos e de banners, ajustes na home, ajustes no header, correções nos botões

--- a/componentes/banners/banners.html
+++ b/componentes/banners/banners.html
@@ -13,96 +13,48 @@
 
 <body>
     <!--BANNER-CARROUSEL DA PARTE DE DESTAQUES-->
-    <div class = "container-fluid d-flex justify-content-center align-items-center titulo-banner">
-        Destaques
-    </div>
-    <div class = "container-fluid caixa-banner">
-        <div id="carrousel-destaque" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner banner">
-              <div class="carousel-item active">
-                <img src="/images/banners/banner-destaques-1.png" class="w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Comece a jogar agora</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, nisi illo fuga excepturi veritatis repellat animi pariatur dolorem perspiciatis consequuntur iusto exercitationem voluptas explicabo incidunt similique suscipit rerum quisquam asperiores?</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/banners/banner-destaques-2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Top skins</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas excepturi ipsum assumenda ad deleniti vero, commodi quam illo ratione accusamus mollitia repellendus nemo nulla nostrum harum itaque placeat hic est!</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/banners/banner-destaque-3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Outros</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ipsum repellat, fuga cumque saepe incidunt voluptatibus sint ad dolore animi rem tempore odit ea assumenda ducimus modi impedit sit at.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+    <div class="container-fluid caixa-banner m-0 mb-5 p-0">
+      <div class="container-fluid titulo-banner">
+        <p>Destaques</p>
+      </div>
+      <div id="carrousel-destaque" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carrousel-destaque" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+
+        <div class="carousel-inner banner">
+          <div class="carousel-item active">
+            <img src="/images/banners/banner-destaques-1.png" class="w-100" alt="...">
           </div>
+
+          <div class="carousel-item">
+            <img src="/images/banners/banner-destaques-2.png" class="d-block w-100" alt="...">
+          </div>
+
+          <div class="carousel-item">
+            <img src="/images/banners/banner-destaque-3.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carrousel-destaque" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
     <!--FIM BANNER-CARROUSEL DA PARTE DE DESTAQUES-->
     
     <!--BANNER-CARROUSEL DA PARTE DE EVENTOS-->
-    <div class = "container-fluid d-flex justify-content-center align-items-center titulo-banner">
-        Eventos
-    </div>
-    <div class = "container-fluid caixa-banner">
-        <div id="carrousel-evento" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carrousel-evento" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carrousel-evento" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carrousel-evento" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner banner">
-              <div class="carousel-item active">
-                <img src="/images/banners/banner-eventos-3.png" class="w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Campeonatos</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, nisi illo fuga excepturi veritatis repellat animi pariatur dolorem perspiciatis consequuntur iusto exercitationem voluptas explicabo incidunt similique suscipit rerum quisquam asperiores?</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/banners/banner-eventos-2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Ligas</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas excepturi ipsum assumenda ad deleniti vero, commodi quam illo ratione accusamus mollitia repellendus nemo nulla nostrum harum itaque placeat hic est!</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/images/banners/banner-eventos-1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Brasil Representa!</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ipsum repellat, fuga cumque saepe incidunt voluptatibus sint ad dolore animi rem tempore odit ea assumenda ducimus modi impedit sit at.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carrousel-evento" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carrousel-evento" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </div>
+
     <!--FIM BANNER-CARROUSEL DA PARTE DE EVENTOS-->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
