--- a/componentes/container-produto-grid/container-produto-grid.html
+++ b/componentes/container-produto-grid/container-produto-grid.html
@@ -17,29 +17,358 @@
   </head>
 
   <body>
-    <!-- Card de produtos -->
-    <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-      <!-- Imagem do produto  -->
-      <div class="card-body border-bottom-3 card-produto">
-        <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png" alt="Imagem de capa do card">
+    <!-- Início do carousel de produtos  -->
+    <div class="container-fluid d-flex justify-content-center align-items-center titulo-banner ">
+      <p>Top Armas</p>
+    </div>
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <!-- Container dos cards de produtos -->
+      <div class="carousel-inner w-auto  mb-3">
+        <!-- ========================PRIMEIRA PÁGINA DO CAROUSEL======================== -->
+        <div class="carousel-item active">
+          <div class="cards-produtos">
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">TESTE Nº1 SKIN ARMA</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ========================SEGUNDA PÁGINA DO CAROUSEL======================== -->
+        <div class="carousel-item">
+          <div class="cards-produtos">
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Info dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- ========================TERCEIRA PÁGINA DO CAROUSEL======================== -->
+        <div class="carousel-item">
+          <div class="cards-produtos">
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-1 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Info dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-2 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-3 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+
+            <!-- Card de produtos -->
+            <div class="card card-produto-mvp card-4 p-0 m-3 col-3 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+              <!-- Imagem do produto  -->
+              <div class="card-body border-bottom-3 card-produto">
+                <img class="card-img-top img-produto-mvp" src="/images/PRODUTOS/produto-carrousel-1.png"
+                  alt="Imagem de capa do card">
+              </div>
+
+              <!-- Linha  -->
+              <hr class="card-linha p-0 m-0">
+
+              <!-- Infos dos cards  -->
+              <div class="card-body card-produto px-3 py-3">
+                <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
+                <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
+                <p class="card-text preco">por R$ PREÇO</p>
+                <!-- Button de primeira importância -->
+                <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <!-- Linha  -->
-      <hr class="card-linha p-0 m-0">
-      
-      <!-- Infos do produto  -->
-      <div class="card-body card-produto px-3 py-3">
-        <h3 class="card-title">AK-47 | LINHAS VERMELHAS</h3>
-        <p class="card-text promocao-de-preco p-0 m-0">de R$ PREÇO</p>
-        <p class="card-text preco">por R$ PREÇO</p>
-        <!-- Button de primeira importância -->
-        <button type="button" class="btn btn-mvp btn-primary btn-primario-mvp col-12">Comprar</button>
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
     </div>
 
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
